Fix spectator chat UI gaps
- Resolve spectator names in chat history instead of "(Left)"
- Show spectator messages as a name-prefixed bubble under the eye icon
- Placeholder tells drafting spectators their chat reaches spectators only

--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -1432,6 +1432,13 @@ ul.player-list {
 	margin-right: 0.5em;
 }
 
+.session-spectators .chat-bubble {
+	top: calc(100% + 1.5em);
+	left: 0;
+	width: max-content;
+	font-size: 1.25em;
+}
+
 .spectators-dropdown {
 	position: absolute;
 	top: 100%;
